# folly_vcpkg_msvc_cpp20

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
